tests/specs/test/exit_code3/main.js
Deno.test("Deno.exitCode", () => {
  Deno.exitCode = 42;
});

Deno.test("success", () => {
});
